# ilmBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  env.template  pyproject.toml  test_endpoints.http
documents/: 2.technical-spec.md
src/: main.py
src/api/routers/: health_check.py  summarise.py  text_completion.py
src/api/schemas/: __init__.py  error.py  summarise.py  text_completion.py
src/core/: config.py  limiter.py
src/core/services/llm/: __init__.py  base.py  llm_factory.py  summarise.py  text_completion.py
src/core/services/llm/providers/: __init__.py  base.py  openrouter.py
src/tests/: conftest.py
src/tests/api/: test_health.py  test_summarise.py  test_text_completion.py
