[tool.poetry]
name = "ilmbot"
version = "0.1.0"
description = ""
authors = [
    "Shehzad Ahmed <shez.ahmed187@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = "^0.34.0"
pytest = "^8.3.5"
httpx = "^0.28.1"
pydantic-settings = "^2.8.1"
langchain = "^0.3.21"
langchain-openai = "^0.3.11"
slowapi = "^0.1.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
